Applications/Timeserver/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: timeserver
  labels:
    app.kubernetes.io/component: 'application'  # The component within the architecture
spec:
  loadBalancerIP: '0.0.0.0'
  selector:
    app.kubernetes.io/component: 'application'  # The component within the architecture
  ports:
    - protocol: UDP
      port: 123
      targetPort: 123
      name: ntp
  type: LoadBalancer
