Applications/Timeserver/base/resources/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: clients-to-application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: application  # The component within the architecture
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: UDP
          port: 123
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/component: alloy
      ports:
        - protocol: TCP
          port: 9123
